update name class

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </span>
             </span>
             <a href="#" class="main__cta">
-                <img src="images/icon-cart.svg" alt="icon cart">
+                <img src="images/icon-cart.svg" class="main__image__cart" alt="icon cart">
                 Add to Cart
             </a>
         </div>
