--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-    <title>Product preview card component</title>
+    <title>Frontend Mentor | Product Preview Card Component</title>
     <link rel="stylesheet" href="css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,26 +13,33 @@
 </head>
 <body>
     <main class="main">
-        <div class="main__image">
-            <img src="images/image-product-mobile.jpg" alt="product" class="main__image__mobile">
-        </div>
-        <div class="main__image__desktop">
-            <img src="images/image-product-desktop.jpg" alt="product" class="main__image__desktop">
-        </div>
-        <div class="main__content">
-            <p class="main__paragraph">Perfume</p>
-            <h1 class="main__title">Gabrielle Essence Eau De Parfum</h1>
-            <p class="main__description">A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
-            <span class="main__price">$149.99
-                <span class="main__old__price">
-                    $169.99
+        <div class="main__container">
+            <div class="main__image">
+                <img src="images/image-product-mobile.jpg" alt="product" class="main__image__mobile">
+            </div>
+            <div class="main__image__desktop">
+                <img src="images/image-product-desktop.jpg" alt="product" class="main__image__desktop">
+            </div>
+            <div class="main__content">
+                <p class="main__paragraph">Perfume</p>
+                <h1 class="main__title">Gabrielle Essence Eau De Parfum</h1>
+                <p class="main__description">A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
+                <span class="main__price">$149.99
+                    <span class="main__old__price">
+                        $169.99
+                    </span>
                 </span>
-            </span>
-            <a href="#" class="main__cta">
-                <img src="images/icon-cart.svg" class="main__image__cart" alt="icon cart">
-                Add to Cart
-            </a>
+                <a href="#" class="main__cta">
+                    <img src="images/icon-cart.svg" class="main__image__cart" alt="icon cart">
+                    Add to Cart
+                </a>
+            </div>
         </div>
     </main>
+
+    <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="https://github.com/valentinvera" target="_blank">Valentín Vera</a>.
+    </div>
 </body>
 </html>
